fixed title on smaller screens

--- a/using-github-for-design-collaboration/css/main.styl
+++ b/using-github-for-design-collaboration/css/main.styl
@@ -1,4 +1,5 @@
 var-background = hsl(0,0%,94%)
+var-color = hsl(0,0%,0%)
 html,body
   height 100%
 body
@@ -6,6 +7,7 @@ body
   padding 0
   margin 0
   background var-background
+  color var-color
 a
   color blue
   text-decoration none
@@ -20,15 +22,50 @@ a
 #article
   -moz-box-sizing border-box
   box-sizing border-box
+h1,h2
+  font-family 'league_gothic', sans-serif
+  text-transform uppercase
+  font-weight normal
+h1
+  font-style italic
 @media screen and (max-width: 700px)
   #image
     width 100%
-    height 300px
+    height 0
+    padding-bottom 62%
+    position relative
+    &:after
+      content ''
+      position absolute
+      width 100%
+      height 100%
+      top 0
+      left 0
+      background hsla(0,0%,0%,0.25)
   #article
     max-width 500px
     position relative
-    margin 0 auto
+    margin -290px auto 0
     padding 0 20px 30px 20px
+  h1
+    font-size 80px
+    line-height 72px
+    max-width 390px
+    color var-background
+    text-shadow 2px 4px 0 #000
+  h2
+    font-size 40px
+  .publishDate
+    border-bottom 1px solid var-color
+@media screen and (max-width: 420px)
+  #image
+    padding-bottom 100%
+  h1
+    font-size 58px
+    line-height 53px
+    max-width 286px
+  #article
+    margin -230px auto 0
 @media screen and (min-width: 700px)
   #article
     display block
@@ -43,22 +80,20 @@ a
     position fixed
     background-position top center
   h1,h2
-    font-family 'league_gothic', sans-serif
-    text-transform uppercase
-    font-weight normal
     padding 0
-    background-image url('../img/dark_leather.jpg')
-    background-size 360px 360px
+    opacity 0.85
+    color hsl(0,0%,10%)
+    -webkit-text-fill-color: transparent;
+    background -webkit-linear-gradient(transparent, transparent), url('../img/dark_leather.jpg') repeat
+    background -o-linear-gradient(transparent, transparent)
     -webkit-background-clip text
     background-clip text
-    -webkit-text-fill-color transparent
-    opacity 0.85
+    background-size 360px 360px
   h1
     font-size 96px
-    line-height 78px
-    font-style italic
+    line-height 82px
     margin-top 0
-    margin-bottom 40px
+    margin-bottom 50px
     padding-top 1px
   h2
     font-size 72px
